[gd_scene load_steps=6 format=3 uid="uid://rs11x2biydpw"]

[ext_resource type="Theme" uid="uid://ti5t14mpo4hx" path="res://assets/other_menu_theme.tres" id="1_mr0mm"]
[ext_resource type="Script" path="res://scripts/username_prompt.gd" id="2_lossk"]

[sub_resource type="LabelSettings" id="LabelSettings_nkko5"]
font_size = 48

[sub_resource type="LabelSettings" id="LabelSettings_ndu6a"]
font_color = Color(0.930156, 0.303953, 0.37697, 1)

[sub_resource type="LabelSettings" id="LabelSettings_jlvok"]
font_size = 32

[node name="UsernamePrompt" type="Control"]
process_mode = 3
z_index = 1001
z_as_relative = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_mr0mm")
script = ExtResource("2_lossk")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.2, 0.2, 0.941176)

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 400
theme_override_constants/margin_right = 400

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer"]
layout_mode = 2

[node name="BoxContainer" type="BoxContainer" parent="ColorRect/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="EnterUsernameLabel" type="Label" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Enter New Username"
label_settings = SubResource("LabelSettings_nkko5")
horizontal_alignment = 1

[node name="BoxContainer2" type="BoxContainer" parent="ColorRect/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_right = 100

[node name="UsernameEdit" type="LineEdit" parent="ColorRect/MarginContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
placeholder_text = "BillyBob123"
max_length = 16

[node name="BoxContainer3" type="BoxContainer" parent="ColorRect/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 150
theme_override_constants/margin_right = 150

[node name="SubmitButton" type="Button" parent="ColorRect/MarginContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
disabled = true
text = "Submit"

[node name="BoxContainer4" type="BoxContainer" parent="ColorRect/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="UsernameExistsLabel" type="Label" parent="ColorRect/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
z_index = 1001
z_as_relative = false
layout_mode = 2
text = "Sorry, that username is taken. Try another one."
label_settings = SubResource("LabelSettings_ndu6a")
horizontal_alignment = 1

[node name="LoadingLabelBox" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.235294, 0.235294, 0.235294, 0.607843)

[node name="LoadingLabel" type="Label" parent="LoadingLabelBox"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -8.5
offset_right = 20.0
offset_bottom = 8.5
grow_horizontal = 2
grow_vertical = 2
text = "Loading..."
label_settings = SubResource("LabelSettings_jlvok")
horizontal_alignment = 1

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="text_changed" from="ColorRect/MarginContainer/VBoxContainer/MarginContainer2/UsernameEdit" to="." method="_on_username_edit_text_changed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/MarginContainer/SubmitButton" to="." method="_on_submit_button_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
